// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiControlBar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiControlBar testClass1 testClass2 euiControlBar--large euiControlBar--fixed"
  data-test-subj="test subject string"
  style="left: 0px; right: 0px;"
>
  <div
    class="euiControlBar__controls"
  >
    <nav
      aria-label="breadcrumb"
      class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
    >
      <button
        class="euiLink euiLink--subdued euiBreadcrumb"
        title="src"
        type="button"
      >
        src
      </button>
      <div
        class="euiBreadcrumbSeparator"
      />
      <span
        aria-current="page"
        class="euiBreadcrumb euiBreadcrumb--last"
        title="components"
      >
        components
      </span>
    </nav>
    <div
      class="euiControlBar__text"
      data-test-subj="dts"
    >
      Close the Hatch
    </div>
    <div
      class="euiControlBar__spacer"
    />
  </div>
</div>
`;

exports[`mobile control bar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiControlBar testClass1 testClass2 euiControlBar--large euiControlBar--fixed euiControlBar--showOnMobile"
  data-test-subj="test subject string"
  style="left: 0px; right: 0px;"
>
  <div
    class="euiControlBar__controls"
  >
    <nav
      aria-label="breadcrumb"
      class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
    >
      <button
        class="euiLink euiLink--subdued euiBreadcrumb"
        title="src"
        type="button"
      >
        src
      </button>
      <div
        class="euiBreadcrumbSeparator"
      />
      <span
        aria-current="page"
        class="euiBreadcrumb euiBreadcrumb--last"
        title="components"
      >
        components
      </span>
    </nav>
    <div
      class="euiControlBar__text"
      data-test-subj="dts"
    >
      Close the Hatch
    </div>
    <div
      class="euiControlBar__spacer"
    />
  </div>
</div>
`;
